@@ -1436,6 +1436,13 @@ Description: Lustre GPF in {:ptlrpc:ptlrpc_server_free_request+373}
 Details    : In case of memory pressure, list_del() can be called twice on
 	     req->rq_history_list, causing a kernel oops.
 
+Severity   : normal
+Bugzilla   : 17026
+Description: (ptllnd_peer.c:557:kptllnd_peer_check_sends()) ASSERTION(!in_interrupt()) failed
+Details    : fix stack overflow in the distributed lock manager by defering export
+	     eviction after a failed ast to the elt thread instead of handling
+	     it in the dlm interpret routine.
+
 --------------------------------------------------------------------------------
 
 2007-08-10         Cluster File Systems, Inc. <info@clusterfs.com>
